Fix video aspect ratio distortion in fullscreen mode
Use CSS fullscreen selectors to ensure videos maintain correct aspect
ratio when played fullscreen in the browser.

(cherry picked from commit 1bbeb639b7420c9756757ea9b8f7e7b0e114520b)

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -349,6 +349,18 @@ summary::before {
   object-fit: contain;
 }
 
+video:-webkit-full-screen {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+video:fullscreen {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .image-viewer video:fullscreen,
 .image-viewer video:-webkit-full-screen,
 .image-viewer video:-moz-full-screen,
